fixed gapping

--- a/style.css
+++ b/style.css
@@ -191,9 +191,12 @@ article {
     margin: 0 auto;
 }
 .step {
-    margin: 0 auto 2rem auto; /* which pne cpntrols the after margin */
+    margin: 2rem auto 0 auto; /* which pne cpntrols the after margin */
     color: #fff;
     background-color: rgba(0, 0, 0, 0.607);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* SF Voices for Gaza Section */
@@ -250,7 +253,7 @@ article {
     background-size: cover;
     background-position: center center;
     z-index: 0;
-    top: .5vh;
+    top: 0;
     height: 110vh;
     /* Center everything inside */
     display: flex;
@@ -258,7 +261,7 @@ article {
     justify-content: center;
   }
 .step1, .step2, .step3 {
-    margin: 2rem auto;
+    margin: 2rem 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
